EVENT-feat-40a19.7: Halloween-2015 event support

--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -8,8 +8,11 @@
   <!-- IF HALLOWEEN -->
   <tr>
     <td class="c_r markup">
-      <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween');" style="margin: 5px 0;">
-        А сколько вкусняшек уже собрали?
+      <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween');" style="margin: 0.5em;">
+        Cколько вкусняшек уже собрали?
+      </button>
+      <button onclick="sn_redirect('{D_SN_ROOT_VIRTUAL}index.php?page=halloween_kids');" style="margin: 0.5em;">
+        Кто собрал все вкусняшки?
       </button>
     </td>
   </tr>
