--- a/design/templates/OpenGame/planet_overview.tpl.html
+++ b/design/templates/OpenGame/planet_overview.tpl.html
@@ -216,8 +216,8 @@
 
         <tr><td colspan=5 class="c">{L_Planet_menu}</td></tr>
         <!-- BEGIN ques -->
-          <tr>
-            <th width=100 height=33%>
+          <tr class="c_l">
+            <td class="c_c" width="9em" height=33%>
               <!-- IF ques.LENGTH -->
                 <div>{L_sys_total_time}</div>
                 <div id="ov_{ques.ID}_total" style="color: red"></div>
@@ -229,10 +229,10 @@
                 {ques.NAME}<br>
               <!-- ENDIF -->
                 <!--<div id="ov_{ques.ID}_timer" style="color: lime" class="ov_{ques.ID}_timer_0"></div>-->
-            </th>
-            <th colspan=4 id="ov_{ques.ID}_que">
+            </td>
+            <td class="c_l" colspan="4" id="ov_{ques.ID}_que">
               {L_eco_que_empty}
-            </th>
+            </td>
           </tr>
         <!-- END ques -->
 
