INT-feat-40a19.11: Added progress bar to total ques on Planet Overview and nabar Research button. Also progress bars can now be disabled

--- a/design/templates/OpenGame/_global_header.tpl.html
+++ b/design/templates/OpenGame/_global_header.tpl.html
@@ -50,6 +50,7 @@
 
       var SN_SOUND_ENABLED = parseInt('{SOUND_ENABLED}') ? parseInt('{SOUND_ENABLED}') : 0;
       var PLAYER_OPTION_ANIMATION_DISABLED = parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') ? parseInt('{PLAYER_OPTION_ANIMATION_DISABLED}') : 0;
+      var PLAYER_OPTION_PROGRESS_BARS_DISABLED = parseInt('{PLAYER_OPTION_PROGRESS_BARS_DISABLED}') ? parseInt('{PLAYER_OPTION_PROGRESS_BARS_DISABLED}') : 0;
       var SN_ROOT_VIRTUAL = '{D_SN_ROOT_VIRTUAL}';
       var sn_path_prefix = '{D_SN_ROOT_VIRTUAL}';
     </script>
