--- a/design/templates/OpenGame/options.tpl.html
+++ b/design/templates/OpenGame/options.tpl.html
@@ -397,8 +397,16 @@
         <tr class="c_c">
           <th colspan="2">
             <input type="hidden" name="options[{D_PLAYER_OPTION_ANIMATION_DISABLED}]" value="0" />
-            <input type="checkbox" id="animation_disabled" name="options[{D_PLAYER_OPTION_ANIMATION_DISABLED}]" value="1"<!-- IF animation_disabled --> checked<!-- ENDIF --> />
-            <label for="animation_disabled">{L_opt_animation_disabled}</label>
+            <input type="checkbox" id="PLAYER_OPTION_ANIMATION_DISABLED" name="options[{D_PLAYER_OPTION_ANIMATION_DISABLED}]" value="1"<!-- IF PLAYER_OPTION_ANIMATION_DISABLED --> checked<!-- ENDIF --> />
+            <label for="PLAYER_OPTION_ANIMATION_DISABLED">{L_PLAYER_OPTION_ANIMATION_DISABLED}</label>
+          </th>
+        </tr>
+
+        <tr class="c_c">
+          <th colspan="2">
+            <input type="hidden" name="options[{D_PLAYER_OPTION_PROGRESS_BARS_DISABLED}]" value="0" />
+            <input type="checkbox" id="PLAYER_OPTION_PROGRESS_BARS_DISABLED" name="options[{D_PLAYER_OPTION_PROGRESS_BARS_DISABLED}]" value="1"<!-- IF PLAYER_OPTION_PROGRESS_BARS_DISABLED --> checked<!-- ENDIF --> />
+            <label for="PLAYER_OPTION_PROGRESS_BARS_DISABLED">{L_PLAYER_OPTION_PROGRESS_BARS_DISABLED}</label>
           </th>
         </tr>
 
