--- a/design/templates/OpenGame/topnav.tpl.html
+++ b/design/templates/OpenGame/topnav.tpl.html
@@ -75,19 +75,30 @@
         <!-- BOF Nav Bar Left block -->
         <td class="c_l noborder" height="5.818181818182em">
         <!-- IF ! GAME_RESEARCH_DISABLED -->
-          <!-- DEFINE $QUE_ID = '{QUE_ID}' -->
+          <!-- DEFINE $QUE_ID = '{QUE_RESEARCH}' -->
           <!-- INCLUDE eco_queue -->
-          <div style="display: inline-block; position: relative; width: 11.63636363636em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
+          <div class="navbar_button wide">
             <a href="buildings.php?mode={D_QUE_RESEARCH}">
-              <img style="position: absolute; left: 0; top: 0;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_standard.png" height="100%" alt="{L_Research}" title="{L_Research}">
+              <img class="navbar_button_image" src="{D_SN_ROOT_RELATIVE}design/images/navbar_research_standard.png" alt="{L_Research}" title="{L_Research}" />
               <!-- IF $QUE_NOT_EMPTY -->
-              <span style="position: absolute; width: 100%; height: 100%;left: 0; top: 0;" class="alpha50">
-                <div>{L_sys_total_time}</div>
-                <div id="topnav_{QUE_ID}_total" style="color: red"></div>
+              <span class="a50 navbar_button_que">
+                  <div class="bld_que_total">
+                    <div class="bld_que_total_time_text topnav_{$QUE_ID}_hide_on_complete">{L_que_slot_length}&nbsp;<span id="topnav_{$QUE_ID}_slots"></span></div>
 
-                <div id="topnav_{QUE_ID}"></div>
-                <div id="topnav_{QUE_ID}_timer" style="color: lime" class="topnav_{QUE_ID}_timer_0"></div>
-                <div style="display: none;" id="topnav_{QUE_ID}_que"></div>
+                    <div class="bld_que_total_bar topnav_{$QUE_ID}_hide_on_complete">
+                      <div id="topnav_{$QUE_ID}_progress_bar" class="bld_que_total_progress_bar"></div>
+                      <div id="topnav_{$QUE_ID}_total" class="bld_que_total_timer"></div>
+                    </div>
+                    <div id="topnav_{$QUE_ID}"></div>
+
+                    <div class="que_slot_time_container que_item_0 topnav_{$QUE_ID}_hide_on_complete">
+                      <div class="que_unit_time que_unit_progress_bar topnav_{$QUE_ID}_unit_bar_0"></div>
+                      <div class="que_unit_time topnav_{$QUE_ID}_timer_0 a50"></div>
+                    </div>
+
+
+                    <div id="topnav_{$QUE_ID}_que" style="display: none;" ></div>
+                  </div>
               </span>
               <!-- ELSE -->
               <span style="width: 100%; position: absolute; left: 0; top: 40%;" class="alpha50">
@@ -112,25 +123,22 @@
         <!-- IF ! PLAYER_OPTION_NAVBAR_DISABLE_HANGAR && ! GAME_HANGAR_DISABLED -->
           <!-- DEFINE $QUE_ID = '{SUBQUE_FLEET}' -->
           <!-- INCLUDE eco_queue -->
-          <div style="display: inline-block; position: relative; width: 5.818181818182em; height: 5.818181818182em; margin-right: 0.25em;" class="c_c">
+          <div class="navbar_button">
             <a href="buildings.php?mode={D_SUBQUE_FLEET}">
-              <img style="position: absolute; left: 0; top: 0;" src="{D_SN_ROOT_RELATIVE}design/images/navbar_hangar.png" height="100%" alt="{L_Shipyard}" title="{L_Shipyard}">
+              <img class="navbar_button_image" src="{D_SN_ROOT_RELATIVE}design/images/navbar_hangar.png" alt="{L_Shipyard}" title="{L_Shipyard}" />
               <!-- IF $QUE_NOT_EMPTY -->
-                <span class="alpha50" style="position: absolute; width: 100%; height: 100%;left: 0; top: 0; vertical-align: middle; display: flex; align-items: center; justify-content: center;" >
+                <span class="a50 navbar_button_que" >
                   <div class="bld_que_total">
-                    <div class="bld_que_total_time_text">{L_que_slot_length}&nbsp;<span id="topnav_{$QUE_ID}_slots"></span></div>
+                    <div class="bld_que_total_time_text topnav_{$QUE_ID}_hide_on_complete">{L_que_slot_length}&nbsp;<span id="topnav_{$QUE_ID}_slots"></span></div>
 
-                    <div class="bld_que_total_bar">
+                    <div class="bld_que_total_bar topnav_{$QUE_ID}_hide_on_complete">
                       <div id="topnav_{$QUE_ID}_progress_bar" class="bld_que_total_progress_bar"></div>
                       <div id="topnav_{$QUE_ID}_total" class="bld_que_total_timer"></div>
                     </div>
-                    <!--<div id="topnav_{$QUE_ID}_total" style="color: red"></div>-->
                     <div id="topnav_{$QUE_ID}"></div>
 
-                    <!--<div id="topnav_{$QUE_ID}_timer" style="color: lime" class="topnav_{$QUE_ID}_timer_0"></div>-->
-                    <div class="que_slot_time_container que_item_0">
+                    <div class="que_slot_time_container que_item_0 topnav_{$QUE_ID}_hide_on_complete">
                       <div class="que_unit_time que_unit_progress_bar topnav_{$QUE_ID}_unit_bar_0"></div>
-                      <!--<div id="topnav_{QUE_ID}_progress_bar" class="bld_que_total_progress_bar"></div>-->
                       <div class="que_unit_time topnav_{$QUE_ID}_timer_0 a50"></div>
                     </div>
 
